--- a/build.gradle
+++ b/build.gradle
@@ -43,12 +43,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'org.json:json:20160212'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.activation:activation:1.1.1'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
     implementation 'org.glassfish.jersey.media:jersey-media-jaxb:2.34'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.34'
 
     // CORS wizardry
     implementation 'com.thetransactioncompany:cors-filter:2.10'
